商品详情基本完成，交互性的暂时押后

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -79,6 +79,14 @@ color: rgba(111,121,139,.5);
 input{
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
 }
+.hide{
+    display: none!important;
+}
+body{
+    font-size: 14px;
+    color: #666;
+    line-height: 1.375;
+}
 /*---- layout ----*/
 html,body,#app,.home-page{
     height: 100%;
@@ -147,4 +155,14 @@ html,body,#app,.home-page{
 }
 .tr{
     text-align: right;
+}
+.gouwuche{
+    background: url(./gouwuche.png) no-repeat center center / auto 20px;
+    display: block;
+    cursor: pointer;
+}
+.shoucang{
+    background: url(./shoucang.png) no-repeat center center / auto 20px;
+    display: block;
+    cursor: pointer;
 }
