商品详情页布局调整，交互优化

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -156,13 +156,15 @@ html,body,#app,.home-page{
 .tr{
     text-align: right;
 }
-.gouwuche{
+.icon-gouwuche{
     background: url(./gouwuche.png) no-repeat center center / auto 20px;
-    display: block;
-    cursor: pointer;
 }
-.shoucang{
+.icon-shoucang{
     background: url(./shoucang.png) no-repeat center center / auto 20px;
-    display: block;
-    cursor: pointer;
+}
+.icon-share{
+    background: url(./share.png) no-repeat center center / auto 20px;
+}
+.icon-back{
+    background: url(./back.png) no-repeat center center / auto 20px;
 }
