--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -156,6 +156,9 @@ html,body,#app,.home-page{
 .tr{
     text-align: right;
 }
+.hand{
+    cursor: pointer;
+}
 .icon-gouwuche{
     background: url(./gouwuche.png) no-repeat center center / auto 20px;
 }
