--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -160,14 +160,20 @@ html,body,#app,.home-page{
     cursor: pointer;
 }
 .icon-gouwuche{
-    background: url(./gouwuche.png) no-repeat center center / auto 20px;
+    background: url(./gouwuche.png) no-repeat center center / auto 16px;
 }
 .icon-shoucang{
-    background: url(./shoucang.png) no-repeat center center / auto 20px;
+    background: url(./shoucang.png) no-repeat center center / auto 16px;
 }
 .icon-share{
-    background: url(./share.png) no-repeat center center / auto 20px;
+    background: url(./share.png) no-repeat center center / auto 16px;
 }
 .icon-back{
-    background: url(./back.png) no-repeat center center / auto 20px;
+    background: url(./back.png) no-repeat center center / auto 16px;
+}
+.icon-check{
+    background: url(./check.png) no-repeat center center / auto 16px;
+}
+.icon-checked{
+    background: url(./checked.png) no-repeat center center / auto 16px;
 }
