购物车基本完成

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -159,6 +159,40 @@ html,body,#app,.home-page{
 .hand{
     cursor: pointer;
 }
+.padl10{
+  padding-left: 10px;
+}
+.padr10{
+  padding-right: 10px;
+}
+.marl10{
+    margin-left: 10px;
+}
+.marr10{
+    margin-right: 10px;
+}
+.bjs-btn{
+    display: inline-block;
+    padding: 3px 8px;
+    border-radius: 3px;
+    vertical-align: middle;
+    font-size: 14px;
+    line-height: 1rem;
+}
+.bjs-btn-default{
+    border: 1px solid #ddd;
+    color: #6f798b;
+}
+.bjs-btn-red{
+    border: 1px solid #ff5a5c;
+    color: #ff5a5c;
+}
+.bjs-btn-full{
+    width: 100%;
+    box-sizing: border-box;
+    padding-left: 0;
+    padding-right: 0;
+}
 .icon-gouwuche{
     background: url(./gouwuche.png) no-repeat center center / auto 16px;
 }
