购物车前后端数据交互，模拟

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -178,6 +178,7 @@ html,body,#app,.home-page{
     vertical-align: middle;
     font-size: 14px;
     line-height: 1rem;
+    cursor: pointer;
 }
 .bjs-btn-default{
     border: 1px solid #ddd;
