底部菜单导航，个人中心

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -160,10 +160,16 @@ html,body,#app,.home-page{
     cursor: pointer;
 }
 .padl10{
-  padding-left: 10px;
+    padding-left: 10px;
+}
+.padt10{
+    padding-top: 10px;
+}
+.padb10{
+    padding-bottom: 10px;
 }
 .padr10{
-  padding-right: 10px;
+    padding-right: 10px;
 }
 .marl10{
     margin-left: 10px;
@@ -206,9 +212,39 @@ html,body,#app,.home-page{
 .icon-back{
     background: url(./back.png) no-repeat center center / auto 16px;
 }
+.icon-user{
+    background: url(./user.png) no-repeat center center / auto 16px;
+}
+.icon-home{
+    background: url(./home.png) no-repeat center center / auto 16px;
+}
+.icon-user-active{
+    background: url(./user-active.png) no-repeat center center / auto 16px;
+}
+.icon-home-active{
+    background: url(./home-active.png) no-repeat center center / auto 16px;
+}
 .icon-check{
     background: url(./check.png) no-repeat center center / auto 16px;
 }
 .icon-checked{
     background: url(./checked.png) no-repeat center center / auto 16px;
+}
+.icon-s0{
+    background-image: url(./icon-s0.png);
+}
+.icon-s1{
+    background-image: url(./icon-s1.png);
+}
+.icon-s2{
+    background-image: url(./icon-s2.png);
+}
+.icon-s3{
+    background-image: url(./icon-s3.png);
+}
+.icon-setting{
+    background: url(./setting.png) no-repeat center center / cover;
+}
+.icon-news{
+    background: url(./news.png) no-repeat center center / cover;
 }
