--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -201,50 +201,50 @@ html,body,#app,.home-page{
     padding-right: 0;
 }
 .icon-gouwuche{
-    background: url(./gouwuche.png) no-repeat center center / auto 16px;
+    background: url(./img/gouwuche.png) no-repeat center center / auto 16px;
 }
 .icon-shoucang{
-    background: url(./shoucang.png) no-repeat center center / auto 16px;
+    background: url(./img/shoucang.png) no-repeat center center / auto 16px;
 }
 .icon-share{
-    background: url(./share.png) no-repeat center center / auto 16px;
+    background: url(./img/share.png) no-repeat center center / auto 16px;
 }
 .icon-back{
-    background: url(./back.png) no-repeat center center / auto 16px;
+    background: url(./img/back.png) no-repeat center center / auto 16px;
 }
 .icon-user{
-    background: url(./user.png) no-repeat center center / auto 16px;
+    background: url(./img/user.png) no-repeat center center / auto 16px;
 }
 .icon-home{
-    background: url(./home.png) no-repeat center center / auto 16px;
+    background: url(./img/home.png) no-repeat center center / auto 16px;
 }
 .icon-user-active{
-    background: url(./user-active.png) no-repeat center center / auto 16px;
+    background: url(./img/user-active.png) no-repeat center center / auto 16px;
 }
 .icon-home-active{
-    background: url(./home-active.png) no-repeat center center / auto 16px;
+    background: url(./img/home-active.png) no-repeat center center / auto 16px;
 }
 .icon-check{
-    background: url(./check.png) no-repeat center center / auto 16px;
+    background: url(./img/check.png) no-repeat center center / auto 16px;
 }
 .icon-checked{
-    background: url(./checked.png) no-repeat center center / auto 16px;
+    background: url(./img/checked.png) no-repeat center center / auto 16px;
 }
 .icon-s0{
-    background-image: url(./icon-s0.png);
+    background-image: url(./img/icon-s0.png);
 }
 .icon-s1{
-    background-image: url(./icon-s1.png);
+    background-image: url(./img/icon-s1.png);
 }
 .icon-s2{
-    background-image: url(./icon-s2.png);
+    background-image: url(./img/icon-s2.png);
 }
 .icon-s3{
-    background-image: url(./icon-s3.png);
+    background-image: url(./img/icon-s3.png);
 }
 .icon-setting{
-    background: url(./setting.png) no-repeat center center / cover;
+    background: url(./img/setting.png) no-repeat center center / cover;
 }
 .icon-news{
-    background: url(./news.png) no-repeat center center / cover;
+    background: url(./img/news.png) no-repeat center center / cover;
 }
